6Week/book-service/deployments/lb-book-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-book-service-service
  namespace: lb-demos
spec:
  type: NodePort
  selector:
    app: lb
    service: book-service
  ports:
    - protocol: TCP
      port: 2006
      targetPort: 2006
